@@ -92,6 +92,9 @@ and returns the result.
 [call [cmd tkcon] [arg new]]
 Creates a new tkcon widget.
 
+[call [cmd tkcon] [arg resultfilter] [opt [arg command]]]
+
+
 [call [cmd tkcon] [arg save] [opt "[arg filename] [opt [arg type]]"]]
 Saves the console buffer to the given filename.
 If no filename is given, it will attempt to call
